fixed cronolog error (reverted to standard log)

--- a/httpd.conf
+++ b/httpd.conf
@@ -494,10 +494,7 @@ HostnameLookups Off
 # container, that host's errors will be logged there and not here.
 #
 # ErrorLog logs/error_log
-
-ErrorLog "| /usr/sbin/cronolog /var/log/httpd/error_log-%Y%m%d -S /var/log/httpd/error_log"
-CustomLog "| /usr/sbin/cronolog /var/log/httpd/access_log-%Y%m%d -S /var/log/httpd/access_log" combined
-
+ErrorLog logs/error_log
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -539,7 +536,7 @@ LogFormat "%{User-agent}i" agent
 # For a single logfile with access, agent, and referer information
 # (Combined Logfile Format), use the following directive:
 #
-#CustomLog logs/access_log combined
+CustomLog logs/access_log combined
 
 #
 # Optionally add a line containing the server version and virtual host
