adding ssl keys and certs to ssl.conf

--- a/certs/ssl.conf
+++ b/certs/ssl.conf
@@ -86,3 +86,7 @@ SetEnvIf User-Agent ".*MSIE.*" \
         nokeepalive ssl-unclean-shutdown \
         downgrade-1.0 force-response-1.0
 
+SSLEngine on
+SSLCertificateKeyFile /localhost.key
+SSLCertificateFile    /localhost.crt
+
