adjusting path to certs

--- a/ssl.conf
+++ b/ssl.conf
@@ -87,6 +87,6 @@ SetEnvIf User-Agent ".*MSIE.*" \
         downgrade-1.0 force-response-1.0
 
 SSLEngine on
-SSLCertificateKeyFile /localhost.key
-SSLCertificateFile    /localhost.crt
+SSLCertificateKeyFile /certs/localhost.key
+SSLCertificateFile    /certs/localhost.crt
 
