--- a/httpd.conf
+++ b/httpd.conf
@@ -263,7 +263,7 @@ Group apache
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin help@duke.edu
+#ServerAdmin admin@localhost
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
