site stuff to virtual host file

--- a/httpd.conf
+++ b/httpd.conf
@@ -294,7 +294,7 @@ UseCanonicalName On
 # symbolic links and aliases may be used to point to other locations.
 #
 
-DocumentRoot "/var/www/html"
+#DocumentRoot "/var/www/html"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -321,7 +321,7 @@ DocumentRoot "/var/www/html"
 #
 
 
-<Directory "/var/www/html">
+#<Directory "/var/www/html">
 
 #
 # Possible values for the Options directive are "None", "All",
@@ -335,22 +335,22 @@ DocumentRoot "/var/www/html"
 # http://httpd.apache.org/docs/2.2/mod/core.html#options
 # for more information.
 #
-    Options Indexes FollowSymlinks
+#    Options Indexes FollowSymlinks
 
 #
 # AllowOverride controls what directives may be placed in .htaccess files.
 # It can be "All", "None", or any combination of the keywords:
 #   Options FileInfo AuthConfig Limit
 #
-    AllowOverride All
+#    AllowOverride All
 
 #
 # Controls who can get stuff from this server.
 #
-    Order allow,deny
-    Allow from all
+#    Order allow,deny
+#    Allow from all
 
-</Directory>
+#</Directory>
 
 #
 # UserDir: The name of the directory that is appended onto a user's home
@@ -536,7 +536,7 @@ LogFormat "%{User-agent}i" agent
 # For a single logfile with access, agent, and referer information
 # (Combined Logfile Format), use the following directive:
 #
-CustomLog logs/access_log combined
+#CustomLog logs/access_log combined
 
 #
 # Optionally add a line containing the server version and virtual host
@@ -591,18 +591,18 @@ Alias /icons/ "/var/www/icons/"
 # The same rules about trailing "/" apply to ScriptAlias directives as to
 # Alias.
 #
-ScriptAlias /cgi-bin/ "/var/www/cgi-bin/"
+#ScriptAlias /cgi-bin/ "/var/www/cgi-bin/"
 
 #
 # "/var/www/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-<Directory "/var/www/cgi-bin">
-    AllowOverride None
-    Options None
-    Order allow,deny
-    Allow from all
-</Directory>
+#<Directory "/var/www/cgi-bin">
+#    AllowOverride None
+#    Options None
+#    Order allow,deny
+#    Allow from all
+#</Directory>
 
 #
 # Redirect allows you to tell clients about documents which used to exist in
@@ -1016,7 +1016,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #
 # Use name-based virtual hosting.
 #
-NameVirtualHost *:80
+#NameVirtualHost *:80
 #
 # NOTE: NameVirtualHost cannot be used without a port specifier 
 # (e.g. :80) if mod_ssl is being used, due to the nature of the
@@ -1024,7 +1024,6 @@ NameVirtualHost *:80
 #
 
 # Disable TraceEnable for added security
-#       - Chris <christopher.collins@duke.edu>, 2013-06-26
 
 TraceEnable Off
 
